--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/andrewmnelson/karaoke-jukebox#readme",
   "dependencies": {
-    "angular": "^1.4.7",
+    "angular": "1.4.x",
     "angular-animate": "^1.4.7",
     "angular-base64": "^2.0.5",
     "angular-cookies": "^1.4.7",
